[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Paula Fernandez <paulamariafdez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rpyc = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
